--- a/SwampAttack/Resources/image/scareking2.plist
+++ b/SwampAttack/Resources/image/scareking2.plist
@@ -4,369 +4,213 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>scareking_hurt_heavy0001.png</key>
+            <key>scareking_down0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{154,424},{166,204}}</string>
+                <string>{{2,546},{242,274}}</string>
                 <key>offset</key>
-                <string>{7,2}</string>
+                <string>{-4,1}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{79,21},{166,204}}</string>
+                <string>{{85,37},{242,274}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_hurt_heavy0002.png</key>
+            <key>scareking_down0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{322,418},{140,202}}</string>
+                <string>{{2,272},{252,272}}</string>
                 <key>offset</key>
-                <string>{42,1}</string>
+                <string>{15,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{127,23},{140,202}}</string>
+                <string>{{99,39},{252,272}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_hurt_heavy0003.png</key>
+            <key>scareking_down0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{484,204},{152,198}}</string>
+                <string>{{2,2},{258,268}}</string>
                 <key>offset</key>
-                <string>{17,-1}</string>
+                <string>{35,-3}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{96,27},{152,198}}</string>
+                <string>{{116,44},{258,268}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_hurt_heavy0004.png</key>
+            <key>scareking_down0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{566,808},{152,194}}</string>
+                <string>{{246,546},{250,250}}</string>
                 <key>offset</key>
-                <string>{-2,-3}</string>
+                <string>{50,-13}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{77,31},{152,194}}</string>
+                <string>{{135,63},{250,250}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_hurt_heavy0005.png</key>
+            <key>scareking_down0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{720,798},{148,190}}</string>
+                <string>{{262,2},{246,228}}</string>
                 <key>offset</key>
-                <string>{-14,-5}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{67,35},{148,190}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_heavy0006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{642,602},{148,194}}</string>
-                <key>offset</key>
-                <string>{-16,-3}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{65,31},{148,194}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_heavy0007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{610,2},{148,198}}</string>
-                <key>offset</key>
-                <string>{-17,-1}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{64,27},{148,198}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_heavy0008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{322,622},{148,200}}</string>
-                <key>offset</key>
-                <string>{-19,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{62,25},{148,200}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_heavy0009.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{310,2},{148,204}}</string>
-                <key>offset</key>
-                <string>{-23,2}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{58,21},{148,204}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_light0001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,214},{160,208}}</string>
-                <key>offset</key>
-                <string>{-3,4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{72,17},{160,208}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_light0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,424},{150,208}}</string>
-                <key>offset</key>
-                <string>{10,5}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{90,16},{150,208}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_light0003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{148,210}}</string>
-                <key>offset</key>
-                <string>{-10,4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{71,16},{148,210}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_light0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,634},{148,208}}</string>
-                <key>offset</key>
-                <string>{-26,4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{55,17},{148,208}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_hurt_light0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{152,2},{156,208}}</string>
-                <key>offset</key>
-                <string>{-22,4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{55,17},{156,208}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_walk0001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{152,634},{168,206}}</string>
-                <key>offset</key>
-                <string>{-16,3}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{55,19},{168,206}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_walk0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{200,842},{168,202}}</string>
-                <key>offset</key>
-                <string>{-8,0}</string>
+                <string>{62,-23}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{63,24},{168,202}}</string>
+                <string>{{149,84},{246,228}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_walk0003.png</key>
+            <key>scareking_down0006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{618,404},{168,196}}</string>
+                <string>{{480,250},{254,204}}</string>
                 <key>offset</key>
-                <string>{0,-2}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{71,29},{168,196}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_walk0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{804,198},{166,192}}</string>
-                <key>offset</key>
-                <string>{9,-4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{81,33},{166,192}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_walk0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{788,400},{166,192}}</string>
-                <key>offset</key>
-                <string>{7,-5}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{79,34},{166,192}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_walk0006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{760,2},{168,194}}</string>
-                <key>offset</key>
-                <string>{4,-6}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{75,34},{168,194}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_walk0007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{472,610},{168,196}}</string>
-                <key>offset</key>
-                <string>{2,-6}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{73,33},{168,196}}</string>
-                <key>sourceSize</key>
-                <string>{310,250}</string>
-            </dict>
-            <key>scareking_walk0008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,844},{170,196}}</string>
-                <key>offset</key>
-                <string>{-1,-7}</string>
+                <string>{68,-32}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{69,34},{170,196}}</string>
+                <string>{{151,105},{254,204}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_walk0009.png</key>
+            <key>scareking_down0007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{638,202},{164,196}}</string>
+                <string>{{492,2},{262,192}}</string>
                 <key>offset</key>
-                <string>{-11,-6}</string>
+                <string>{73,-20}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{62,33},{164,196}}</string>
+                <string>{{152,99},{262,192}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_walk0010.png</key>
+            <key>scareking_down0008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{404,824},{160,198}}</string>
+                <string>{{556,670},{274,168}}</string>
                 <key>offset</key>
-                <string>{-22,-4}</string>
+                <string>{69,-44}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{142,135},{274,168}}</string>
+                <key>sourceSize</key>
+                <string>{420,350}</string>
+            </dict>
+            <key>scareking_down0009.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{848,2},{288,154}}</string>
+                <key>offset</key>
+                <string>{61,-57}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{127,155},{288,154}}</string>
+                <key>sourceSize</key>
+                <string>{420,350}</string>
+            </dict>
+            <key>scareking_down0010.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{726,776},{292,156}}</string>
+                <key>offset</key>
+                <string>{52,-64}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{53,30},{160,198}}</string>
+                <string>{{116,161},{292,156}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_walk0011.png</key>
+            <key>scareking_down0011.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{464,410},{152,198}}</string>
+                <string>{{794,490},{284,164}}</string>
                 <key>offset</key>
-                <string>{-32,-3}</string>
+                <string>{45,-70}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{113,163},{284,164}}</string>
+                <key>sourceSize</key>
+                <string>{420,350}</string>
+            </dict>
+            <key>scareking_down0012.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{498,506},{294,162}}</string>
+                <key>offset</key>
+                <string>{46,-80}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{47,29},{152,198}}</string>
+                <string>{{109,174},{294,162}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_walk0012.png</key>
+            <key>scareking_down0013.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{460,2},{148,200}}</string>
+                <string>{{686,196},{292,160}}</string>
                 <key>offset</key>
-                <string>{-40,-1}</string>
+                <string>{52,-89}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{116,184},{292,160}}</string>
+                <key>sourceSize</key>
+                <string>{420,350}</string>
+            </dict>
+            <key>scareking_hurt_on0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{256,272},{222,264}}</string>
+                <key>offset</key>
+                <string>{14,-11}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{41,26},{148,200}}</string>
+                <string>{{113,54},{222,264}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_walk0013.png</key>
+            <key>scareking_hurt_on0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{328,208},{154,200}}</string>
+                <string>{{2,822},{200,278}}</string>
                 <key>offset</key>
-                <string>{-33,0}</string>
+                <string>{6,4}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{45,25},{154,200}}</string>
+                <string>{{116,32},{200,278}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
-            <key>scareking_walk0014.png</key>
+            <key>scareking_hurt_on0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{164,212},{162,204}}</string>
+                <string>{{282,798},{218,272}}</string>
                 <key>offset</key>
-                <string>{-25,2}</string>
+                <string>{28,2}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{49,21},{162,204}}</string>
+                <string>{{129,37},{218,272}}</string>
                 <key>sourceSize</key>
-                <string>{310,250}</string>
+                <string>{420,350}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -378,7 +222,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:74ef3dd8cad6ae2480863b3b7e051618:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:e2c92bd95d7b42f96b78373ed91edc10:1/1$</string>
             <key>textureFileName</key>
             <string>scareking2.png</string>
         </dict>
