--- a/SwampAttack/Resources/image/skullking3.plist
+++ b/SwampAttack/Resources/image/skullking3.plist
@@ -4,263 +4,263 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>skullking_attack0001.png</key>
+            <key>skullking_hurt_light0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{776,2},{200,246}}</string>
+                <string>{{668,248},{186,242}}</string>
                 <key>offset</key>
-                <string>{-25,-9}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{65,61},{200,246}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_attack0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{218,240},{142,276}}</string>
-                <key>offset</key>
-                <string>{21,6}</string>
+                <string>{0,-10}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{140,31},{142,276}}</string>
+                <string>{{97,64},{186,242}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_attack0003.png</key>
+            <key>skullking_hurt_on0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{216,764},{184,250}}</string>
+                <string>{{534,744},{186,236}}</string>
                 <key>offset</key>
-                <string>{37,-6}</string>
+                <string>{14,-12}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{135,56},{184,250}}</string>
+                <string>{{111,69},{186,236}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_attack0004.png</key>
+            <key>skullking_hurt_on0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{362,218},{172,262}}</string>
+                <string>{{538,2},{164,244}}</string>
                 <key>offset</key>
-                <string>{31,0}</string>
+                <string>{10,-5}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{135,44},{172,262}}</string>
+                <string>{{118,58},{164,244}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_attack0005.png</key>
+            <key>skullking_hurt_on0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,502},{206,264}}</string>
+                <string>{{856,2},{166,230}}</string>
                 <key>offset</key>
-                <string>{-21,2}</string>
+                <string>{-14,-14}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{66,41},{206,264}}</string>
+                <string>{{93,74},{166,230}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_attack0006.png</key>
+            <key>skullking_hurt_on0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{254,236}}</string>
+                <string>{{676,492},{210,232}}</string>
                 <key>offset</key>
-                <string>{-48,-12}</string>
+                <string>{-25,-14}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{15,69},{254,236}}</string>
+                <string>{{60,73},{210,232}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_attack0007.png</key>
+            <key>skullking_hurt_on0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,240},{260,214}}</string>
+                <string>{{722,726},{186,232}}</string>
                 <key>offset</key>
-                <string>{-46,-23}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{14,91},{260,214}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_attack0008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{258,2},{258,214}}</string>
-                <key>offset</key>
-                <string>{-48,-22}</string>
+                <string>{-13,-14}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{13,90},{258,214}}</string>
+                <string>{{84,73},{186,232}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_attack0009.png</key>
+            <key>skullking_walk0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{518,2},{256,212}}</string>
+                <string>{{194,2},{178,248}}</string>
                 <key>offset</key>
-                <string>{-50,-23}</string>
+                <string>{-8,-11}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{12,92},{256,212}}</string>
+                <string>{{93,62},{178,248}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_attack0010.png</key>
+            <key>skullking_walk0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,768},{252,212}}</string>
+                <string>{{348,762},{184,246}}</string>
                 <key>offset</key>
-                <string>{-51,-23}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{13,92},{252,212}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_attack0011.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{778,548},{216,230}}</string>
-                <key>offset</key>
-                <string>{-37,-16}</string>
+                <string>{-10,-10}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{45,76},{216,230}}</string>
+                <string>{{88,62},{184,246}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_hurt_heavy0001.png</key>
+            <key>skullking_walk0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{388,482},{194,242}}</string>
+                <string>{{478,252},{188,244}}</string>
+                <key>offset</key>
+                <string>{-11,-10}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{85,63},{188,244}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_walk0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{350,502},{162,246}}</string>
+                <key>offset</key>
+                <string>{0,-10}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{109,62},{162,246}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_walk0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,514},{154,252}}</string>
+                <key>offset</key>
+                <string>{5,-7}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{118,56},{154,252}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_walk0006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,260},{154,252}}</string>
+                <key>offset</key>
+                <string>{3,-8}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{116,57},{154,252}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_walk0007.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,768},{158,250}}</string>
+                <key>offset</key>
+                <string>{2,-10}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{113,60},{158,250}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_walk0008.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{310,252},{166,248}}</string>
                 <key>offset</key>
                 <string>{3,-11}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{96,65},{194,242}}</string>
+                <string>{{110,62},{166,248}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_hurt_heavy0002.png</key>
+            <key>skullking_walk0009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{402,726},{202,242}}</string>
+                <string>{{374,2},{162,248}}</string>
                 <key>offset</key>
-                <string>{22,-10}</string>
+                <string>{7,-11}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{111,64},{202,242}}</string>
+                <string>{{116,62},{162,248}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_hurt_heavy0003.png</key>
+            <key>skullking_walk0010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{584,404},{186,238}}</string>
+                <string>{{514,498},{160,244}}</string>
                 <key>offset</key>
-                <string>{15,-11}</string>
+                <string>{9,-11}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{112,67},{186,238}}</string>
+                <string>{{119,64},{160,244}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_hurt_heavy0004.png</key>
+            <key>skullking_walk0011.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{606,644},{170,242}}</string>
+                <string>{{158,260},{150,250}}</string>
                 <key>offset</key>
-                <string>{11,-7}</string>
+                <string>{6,-11}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{116,61},{170,242}}</string>
+                <string>{{121,61},{150,250}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_hurt_heavy0005.png</key>
+            <key>skullking_walk0012.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{776,204},{164,246}}</string>
+                <string>{{2,2},{190,256}}</string>
                 <key>offset</key>
-                <string>{11,-4}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{119,56},{164,246}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_hurt_light0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{536,216},{186,238}}</string>
-                <key>offset</key>
-                <string>{15,-11}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{112,67},{186,238}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_hurt_light0003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{776,370},{176,240}}</string>
-                <key>offset</key>
-                <string>{12,-9}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{114,64},{176,240}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_hurt_light0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{778,780},{170,240}}</string>
-                <key>offset</key>
-                <string>{11,-8}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{116,63},{170,240}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_hurt_light0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{210,518},{176,244}}</string>
-                <key>offset</key>
-                <string>{-2,-8}</string>
+                <string>{-13,-8}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{100,61},{176,244}}</string>
+                <string>{{82,55},{190,256}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_walk0013.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{158,512},{190,248}}</string>
+                <key>offset</key>
+                <string>{-15,-7}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{80,58},{190,248}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_walk0014.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{162,762},{184,246}}</string>
+                <key>offset</key>
+                <string>{-14,-8}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{84,60},{184,246}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
@@ -270,13 +270,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>skullking2.png</string>
+            <string>skullking3.png</string>
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:4c667982106542b0b17e1e5d90fd0232:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:1afcf7d232eb62886b83f165c5bb5207:1/1$</string>
             <key>textureFileName</key>
-            <string>skullking2.png</string>
+            <string>skullking3.png</string>
         </dict>
     </dict>
 </plist>
