--- a/SwampAttack/Resources/image/wolfking1.plist
+++ b/SwampAttack/Resources/image/wolfking1.plist
@@ -4,265 +4,31 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>wolfking_hurt_heavy0004.png</key>
+            <key>wolfking_hurt_on0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{400,424},{212,212}}</string>
+                <string>{{2,2},{292,286}}</string>
                 <key>offset</key>
-                <string>{38,-29}</string>
+                <string>{27,-37}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{107,98},{212,212}}</string>
+                <string>{{116,129},{292,286}}</string>
                 <key>sourceSize</key>
-                <string>{350,350}</string>
+                <string>{470,470}</string>
             </dict>
-            <key>wolfking_hurt_light0001.png</key>
+            <key>wolfking_hurt_on0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{202,434},{196,216}}</string>
+                <string>{{2,290},{286,270}}</string>
                 <key>offset</key>
-                <string>{20,-27}</string>
+                <string>{35,-45}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{97,94},{196,216}}</string>
+                <string>{{127,145},{286,270}}</string>
                 <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_hurt_light0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,434},{198,218}}</string>
-                <key>offset</key>
-                <string>{22,-26}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{98,92},{198,218}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_hurt_light0003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{614,422},{198,210}}</string>
-                <key>offset</key>
-                <string>{25,-30}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{101,100},{198,210}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_hurt_light0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{206,208},{200,214}}</string>
-                <key>offset</key>
-                <string>{26,-33}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{101,101},{200,214}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_hurt_light0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{814,208},{200,208}}</string>
-                <key>offset</key>
-                <string>{19,-31}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{94,102},{200,208}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{248,2},{234,204}}</string>
-                <key>offset</key>
-                <string>{12,-35}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{70,108},{234,204}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{710,2},{224,204}}</string>
-                <key>offset</key>
-                <string>{7,-36}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{70,109},{224,204}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{408,208},{212,208}}</string>
-                <key>offset</key>
-                <string>{3,-41}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{72,112},{212,208}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{618,208},{186,210}}</string>
-                <key>offset</key>
-                <string>{-8,-37}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{74,107},{186,210}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{582,638},{200,210}}</string>
-                <key>offset</key>
-                <string>{0,-32}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{75,102},{200,210}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{190,654},{216,214}}</string>
-                <key>offset</key>
-                <string>{9,-29}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{76,97},{216,214}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{484,2},{224,204}}</string>
-                <key>offset</key>
-                <string>{7,-30}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{70,103},{224,204}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{244,204}}</string>
-                <key>offset</key>
-                <string>{13,-36}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{66,109},{244,204}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0009.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,208},{224,202}}</string>
-                <key>offset</key>
-                <string>{4,-36}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{67,110},{224,202}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0010.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{814,610},{202,204}}</string>
-                <key>offset</key>
-                <string>{-3,-37}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{71,110},{202,204}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0011.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{784,814},{182,210}}</string>
-                <key>offset</key>
-                <string>{-12,-36}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{72,106},{182,210}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0012.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{406,638},{174,212}}</string>
-                <key>offset</key>
-                <string>{-15,-33}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{73,102},{174,212}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0013.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,654},{186,218}}</string>
-                <key>offset</key>
-                <string>{-7,-32}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{75,98},{186,218}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
-            </dict>
-            <key>wolfking_walk0014.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{814,410},{198,208}}</string>
-                <key>offset</key>
-                <string>{-4,-32}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{72,103},{198,208}}</string>
-                <key>sourceSize</key>
-                <string>{350,350}</string>
+                <string>{470,470}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -272,9 +38,9 @@
             <key>realTextureFileName</key>
             <string>wolfking1.png</string>
             <key>size</key>
-            <string>{1024,1024}</string>
+            <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:f9342c06ff8acd71667ccb39cc212b05:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:7cfc932f50f5e7b5129513cd0b9ad614:1/1$</string>
             <key>textureFileName</key>
             <string>wolfking1.png</string>
         </dict>
