--- a/SwampAttack/Resources/image/wolfking5.plist
+++ b/SwampAttack/Resources/image/wolfking5.plist
@@ -4,120 +4,94 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>wolfking_walk0001.png</key>
+            <key>wolfking_attack0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{336,2},{320,276}}</string>
+                <string>{{676,582},{322,292}}</string>
                 <key>offset</key>
-                <string>{11,-44}</string>
+                <string>{8,-34}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{86,141},{320,276}}</string>
+                <string>{{82,123},{322,292}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_walk0002.png</key>
+            <key>wolfking_attack0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,282},{304,276}}</string>
+                <string>{{388,582},{286,354}}</string>
                 <key>offset</key>
-                <string>{6,-45}</string>
+                <string>{46,-3}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{89,142},{304,276}}</string>
+                <string>{{138,61},{286,354}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_walk0003.png</key>
+            <key>wolfking_attack0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{308,558},{288,286}}</string>
+                <string>{{2,276},{290,412}}</string>
                 <key>offset</key>
-                <string>{0,-51}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{91,143},{288,286}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_walk0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{598,576},{254,286}}</string>
-                <key>offset</key>
-                <string>{-15,-46}</string>
+                <string>{63,26}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{93,138},{254,286}}</string>
+                <string>{{153,3},{290,412}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_walk0005.png</key>
+            <key>wolfking_attack0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,560},{272,286}}</string>
+                <string>{{430,264},{316,412}}</string>
                 <key>offset</key>
-                <string>{-5,-39}</string>
+                <string>{23,26}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{94,131},{272,286}}</string>
+                <string>{{100,3},{316,412}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_walk0006.png</key>
+            <key>wolfking_attack0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{642,282},{294,292}}</string>
+                <string>{{2,568},{384,370}}</string>
                 <key>offset</key>
-                <string>{8,-35}</string>
+                <string>{-18,5}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{96,124},{294,292}}</string>
+                <string>{{25,45},{384,370}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_walk0007.png</key>
+            <key>wolfking_attack0006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{658,2},{304,278}}</string>
+                <string>{{2,2},{426,272}}</string>
                 <key>offset</key>
-                <string>{5,-36}</string>
+                <string>{-21,-62}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{88,132},{304,278}}</string>
+                <string>{{1,161},{426,272}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_walk0008.png</key>
+            <key>wolfking_attack0007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{332,278}}</string>
+                <string>{{430,2},{418,260}}</string>
                 <key>offset</key>
-                <string>{13,-45}</string>
+                <string>{-22,-62}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{82,141},{332,278}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_walk0009.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{336,280},{304,276}}</string>
-                <key>offset</key>
-                <string>{2,-44}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{85,141},{304,276}}</string>
+                <string>{{4,167},{418,260}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
@@ -127,13 +101,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>wolfking4.png</string>
+            <string>wolfking5.png</string>
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:ea99844a242d0ffcebbd71fde882806f:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:e76f002d006f61aacb009784bb7edc80:1/1$</string>
             <key>textureFileName</key>
-            <string>wolfking4.png</string>
+            <string>wolfking5.png</string>
         </dict>
     </dict>
 </plist>
