--- a/SwampAttack/Resources/image/wolfking6.plist
+++ b/SwampAttack/Resources/image/wolfking6.plist
@@ -4,120 +4,120 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>wolfking_down0013.png</key>
+            <key>wolfking_hurt_heavy0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{328,234}}</string>
-                <key>offset</key>
-                <string>{23,-104}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{94,222},{328,234}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_hurt_light0001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,238},{268,296}}</string>
-                <key>offset</key>
-                <string>{22,-32}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{123,119},{268,296}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_hurt_light0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{332,2},{268,296}}</string>
+                <string>{{290,2},{278,296}}</string>
                 <key>offset</key>
                 <string>{27,-32}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
-                <string>{{128,119},{268,296}}</string>
+                <string>{{123,119},{278,296}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_hurt_light0003.png</key>
+            <key>wolfking_hurt_heavy0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{300,272},{272,288}}</string>
+                <string>{{2,304},{290,296}}</string>
                 <key>offset</key>
-                <string>{29,-36}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{128,127},{272,288}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_hurt_light0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{630,256},{272,292}}</string>
-                <key>offset</key>
-                <string>{31,-40}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{130,129},{272,292}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_hurt_light0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{590,530},{272,284}}</string>
-                <key>offset</key>
-                <string>{22,-38}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{121,131},{272,284}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_hurt_on0001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,508},{286,274}}</string>
-                <key>offset</key>
-                <string>{49,-46}</string>
+                <string>{38,-32}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{141,144},{286,274}}</string>
+                <string>{{128,119},{290,296}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_hurt_on0002.png</key>
+            <key>wolfking_hurt_heavy0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{290,546},{270,280}}</string>
+                <string>{{294,300},{290,288}}</string>
                 <key>offset</key>
-                <string>{40,-44}</string>
+                <string>{43,-36}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{140,139},{270,280}}</string>
+                <string>{{133,127},{290,288}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_hurt_on0003.png</key>
+            <key>wolfking_hurt_heavy0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{630,2},{252,294}}</string>
+                <string>{{274,602},{290,290}}</string>
                 <key>offset</key>
-                <string>{33,-44}</string>
+                <string>{48,-35}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
-                <string>{{142,132},{252,294}}</string>
+                <string>{{138,125},{290,290}}</string>
+                <key>sourceSize</key>
+                <string>{470,470}</string>
+            </dict>
+            <key>wolfking_hurt_heavy0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{286,300}}</string>
+                <key>offset</key>
+                <string>{53,-30}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{145,115},{286,300}}</string>
+                <key>sourceSize</key>
+                <string>{470,470}</string>
+            </dict>
+            <key>wolfking_hurt_heavy0006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{566,592},{272,286}}</string>
+                <key>offset</key>
+                <string>{31,-37}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{130,129},{272,286}}</string>
+                <key>sourceSize</key>
+                <string>{470,470}</string>
+            </dict>
+            <key>wolfking_hurt_heavy0007.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{584,294},{268,286}}</string>
+                <key>offset</key>
+                <string>{3,-38}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{104,130},{268,286}}</string>
+                <key>sourceSize</key>
+                <string>{470,470}</string>
+            </dict>
+            <key>wolfking_hurt_heavy0008.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,602},{270,296}}</string>
+                <key>offset</key>
+                <string>{-28,-37}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{72,124},{270,296}}</string>
+                <key>sourceSize</key>
+                <string>{470,470}</string>
+            </dict>
+            <key>wolfking_hurt_heavy0009.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{570,2},{274,290}}</string>
+                <key>offset</key>
+                <string>{-9,-35}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{89,125},{274,290}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
@@ -127,13 +127,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>wolfking2.png</string>
+            <string>wolfking6.png</string>
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:52258e65b57c1123834434ca44972fbf:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:c42aec18ff08bc23dca7cec08736710d:1/1$</string>
             <key>textureFileName</key>
-            <string>wolfking2.png</string>
+            <string>wolfking6.png</string>
         </dict>
     </dict>
 </plist>
